--- a/src/PowerBridge/Internal/Resources.resx
+++ b/src/PowerBridge/Internal/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ArgumentParameterNotValidWithExpressionParameter" xml:space="preserve">
+    <value>The Arguments parameter can only be specified with the File parameter.</value>
+  </data>
   <data name="CustomFileLineNumberFormat" xml:space="preserve">
     <value>at {0}: line {1}</value>
   </data>
